--- a/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Soccer.xaml
+++ b/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Soccer.xaml
@@ -29,7 +29,8 @@
             <Label x:Name="awayScore" Text="0" FontSize="50" TextColor="Black" HorizontalOptions="Center"/>
         </Frame>
 
-        <Button Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="30" Grid.Column="1" WidthRequest="75"/>
+        <Button x:Name="AddHome" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="35" Grid.Column="1" WidthRequest="75" Clicked="AddHome_Clicked"/>
+        <Button x:Name="AddAway" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="35" Grid.Column="3" WidthRequest="75" Clicked="AddAway_Clicked"/>
  
 
     </Grid>
