Added save button and partially added save to file

--- a/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Soccer.xaml
+++ b/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Soccer.xaml
@@ -8,6 +8,7 @@
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="0.5*" />
+            <RowDefinition Height="0.5*" />
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -31,7 +32,9 @@
 
         <Button x:Name="AddHome" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="35" Grid.Column="1" WidthRequest="75" Clicked="AddHome_Clicked"/>
         <Button x:Name="AddAway" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="35" Grid.Column="3" WidthRequest="75" Clicked="AddAway_Clicked"/>
- 
+
+        <Button x:Name="SaveGame" Text="Save Game" HorizontalOptions="Center" Grid.Row="4" Grid.Column="2" Clicked="SaveGame_Clicked"/>
+
 
     </Grid>
     
