--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker.UWP/App.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker.UWP/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Sports_Score_Tracker.UWP.App"
+    x:Class="ScoreTracker.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Sports_Score_Tracker.UWP"
+    xmlns:local="using:ScoreTracker.UWP"
     RequestedTheme="Light">
 
 </Application>
