--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Soccer.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Soccer.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Sports_Score_Tracker.Soccer">
+             x:Class="ScoreTracker.Soccer">
+    
     <Grid BackgroundColor="LightGreen">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
@@ -12,11 +13,11 @@
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
         <Label Text="Soccer" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" />
@@ -37,5 +38,4 @@
 
 
     </Grid>
-    
 </ContentPage>
