--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/MainPage.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/MainPage.xaml
@@ -26,7 +26,11 @@
                 <TapGestureRecognizer Tapped="ImgSoccer_Tapped" NumberOfTapsRequired="1"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
-        <Image x:Name="imgBasketball" HeightRequest="50" WidthRequest="50" Grid.Row="1" Grid.Column="3"></Image>
+        <Image x:Name="imgBasketball" HeightRequest="50" WidthRequest="50" Grid.Row="1" Grid.Column="3">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Tapped="ImgBasketball_Tapped" NumberOfTapsRequired="1"></TapGestureRecognizer>
+            </Image.GestureRecognizers>
+        </Image>
         <Image x:Name="imgTennis" HeightRequest="50" WidthRequest="50" Grid.Row="2" Grid.Column="1"></Image>
         <Image x:Name="imgHockey" HeightRequest="50" WidthRequest="50" Grid.Row="2" Grid.Column="3">
             <Image.GestureRecognizers>
