--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/MainPage.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/MainPage.xaml
@@ -15,7 +15,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -51,7 +51,7 @@
                 <TapGestureRecognizer Tapped="ImgRugby_Tapped" NumberOfTapsRequired="1"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
-        <Button x:Name="Matches_btn" Text="View Saved Matches" Grid.Row="4" Grid.Column="2" Clicked="Matches_btn_Clicked"></Button>
+        <Button x:Name="Matches_btn" Text="View Saved Matches" Grid.Row="4" Grid.Column="2" HeightRequest="100" VerticalOptions="Center" Clicked="Matches_btn_Clicked"></Button>
     </Grid>
 
 </ContentPage>
