--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/GAA.xaml
@@ -9,6 +9,8 @@
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="0.5*" />
+            <RowDefinition Height="0.3*" />
+            <RowDefinition Height="0.3*" />
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
@@ -43,6 +45,10 @@
         <Button x:Name="AddHome1Point" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="20" Grid.Column="2" WidthRequest="40" Clicked="AddHome1Point_Clicked"/>
         <Button x:Name="AddAway1Goal" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="20" Grid.Column="4" WidthRequest="40" Clicked="AddAway1Goal_Clicked"/>
         <Button x:Name="AddAway1Point" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="20" Grid.Column="5" WidthRequest="40" Clicked="AddAway1Point_Clicked"/>
-        <Button x:Name="SaveGame" Text="Save Game" HorizontalOptions="Center" FontSize="10" Grid.Row="4" Grid.Column="3" Clicked="SaveGame_Clicked"/>
+
+        <Entry x:Name="matchName" Placeholder="Match Name" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+        <Button x:Name="SaveGame" Text="Save Game" HorizontalOptions="Center" FontSize="10" Grid.Row="6" Grid.Column="3" Clicked="SaveGame_Clicked"/>
+        
+        
     </Grid>
 </ContentPage>
