--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
@@ -9,6 +9,8 @@
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="0.5*" />
+            <RowDefinition Height="0.3*" />
+            <RowDefinition Height="0.3*" />
             <RowDefinition Height="0.5*" />
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
@@ -39,6 +41,7 @@
         <Button x:Name="AddAwayConversion" Text="+2" HorizontalOptions="Center" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayConversion_Clicked"/>
         <Button x:Name="AddAwayGoalKick" Text="+3" HorizontalOptions="End" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayGoalKick_Clicked"/>
 
-        <Button x:Name="SaveGame" Text="Save Game" HorizontalOptions="Center" Grid.Row="4" Grid.Column="2" Clicked="SaveGame_Clicked"/>
+        <Entry x:Name="matchName" Placeholder="Match Name" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3"></Entry>
+        <Button x:Name="SaveGame" Text="Save Game" HorizontalOptions="Center" Grid.Row="6" Grid.Column="2" Clicked="SaveGame_Clicked"/>
     </Grid>
 </ContentPage>
