Added update and save a previously created game

--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/LoadGames.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/LoadGames.xaml
@@ -46,6 +46,7 @@
 
         <StackLayout x:Name="ListItemGameType" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" Grid.ColumnSpan="3">
             <Label x:Name="gameTypelbl" Text="{Binding Path=GameType}" FontSize="Large" TextColor="Black" />
+            <Label x:Name="matchNamelbl" Text="{Binding Path=MatchName}" FontSize="Large" TextColor="Black" FontAttributes="Italic" />
         </StackLayout>
         <StackLayout x:Name="ListItemHomeTeam" Grid.Row="1" Grid.Column="1">
             <Label Text="Name:" FontSize="Medium"/>
@@ -69,7 +70,7 @@
             <Entry x:Name="awayScorelbl" Text="{Binding Path=AwayScore}" FontSize="15" HorizontalOptions="Fill"/>
         </StackLayout>
 
-        <Button Grid.Row="4" Grid.Column="1" Text="Save" WidthRequest="120" HeightRequest="75" HorizontalOptions="Center" VerticalOptions="Center"></Button>
-        <Button Grid.Row="4" Grid.Column="3" Text="Delete" WidthRequest="120" HeightRequest="75" HorizontalOptions="Center" VerticalOptions="Center"></Button>
+        <Button x:Name="saveBtn" Grid.Row="4" Grid.Column="1" Text="Save" WidthRequest="120" HeightRequest="75" HorizontalOptions="Center" VerticalOptions="Center" Clicked="SaveBtn_Clicked"></Button>
+        <Button x:Name="deleteBtn" Grid.Row="4" Grid.Column="3" Text="Delete" WidthRequest="120" HeightRequest="75" HorizontalOptions="Center" VerticalOptions="Center"></Button>
     </Grid>
 </ContentPage>
