--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Tennis.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Tennis.xaml
@@ -22,15 +22,17 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
-        <Label x:Name="gameType" Text="Tennis" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" />
-        <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="1"/>
-        <Label Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
-        <Label x:Name="awayTeam" Text="Away" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="3"/>
+        <Image x:Name="imgBackground" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="8" Aspect="AspectFill"/>
+
+        <Label x:Name="gameType" Text="Tennis" FontSize="Large" TextColor="White" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" />
+        <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="White" HorizontalOptions="Center" Grid.Row="1" Grid.Column="1"/>
+        <Label Text="-" FontSize="Large" TextColor="White" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
+        <Label x:Name="awayTeam" Text="Away" FontSize="Large" TextColor="White" HorizontalOptions="Center" Grid.Row="1" Grid.Column="3"/>
         <Frame Grid.Row="2" Grid.Column="1" BorderColor="Black">
-            <Label x:Name="homeScore" Text="0" FontSize="50" TextColor="Black" HorizontalOptions="Center"/>
+            <Label x:Name="homeScore" Text="0" FontSize="50" TextColor="White" HorizontalOptions="Center"/>
         </Frame>
         <Frame Grid.Row="2" Grid.Column="3" BorderColor="Black">
-            <Label x:Name="awayScore" Text="0" FontSize="50" TextColor="Black" HorizontalOptions="Center"/>
+            <Label x:Name="awayScore" Text="0" FontSize="50" TextColor="White" HorizontalOptions="Center"/>
         </Frame>
 
         <Button x:Name="AddHome" Text="+" HorizontalOptions="Center" Grid.Row="3" FontSize="35" Grid.Column="1" WidthRequest="75" Clicked="AddHome_Clicked"/>
