--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/MainPage.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/MainPage.xaml
@@ -53,7 +53,7 @@
                 <TapGestureRecognizer Tapped="ImgRugby_Tapped" NumberOfTapsRequired="1"></TapGestureRecognizer>
             </Image.GestureRecognizers>
         </Image>
-        <Button x:Name="Matches_btn" BackgroundColor="White" Text="View Saved Matches" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" HeightRequest="100" VerticalOptions="Center" Clicked="Matches_btn_Clicked"></Button>
+        <Button x:Name="Matches_btn" BorderRadius="20" BackgroundColor="White" Text="View Saved Matches" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" HeightRequest="100" VerticalOptions="Center" Clicked="Matches_btn_Clicked"></Button>
     </Grid>
 
 </ContentPage>
