--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
@@ -22,6 +22,8 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
+        <Image x:Name="imgBackground" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="8" Aspect="AspectFill"/>
+
         <Label x:Name="gameType" Text="Rugby" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" />
         <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="1"/>
         <Label Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
@@ -33,15 +35,15 @@
             <Label x:Name="awayScore" Text="0" FontSize="50" TextColor="Black" HorizontalOptions="Center"/>
         </Frame>
 
-        <Button x:Name="AddHomeTry" Text="+5" HorizontalOptions="Start" Grid.Row="3" FontSize="12" Grid.Column="1" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddHomeTry_Clicked"/>
-        <Button x:Name="AddHomeConversion" Text="+2" HorizontalOptions="Center" Grid.Row="3" FontSize="12" Grid.Column="1" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddHomeConversion_Clicked"/>
-        <Button x:Name="AddHomeGoalKick" Text="+3" HorizontalOptions="End" Grid.Row="3" FontSize="12" Grid.Column="1" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddHomeGoalKick_Clicked"/>
+        <Button x:Name="AddHomeTry" Text="+5" BackgroundColor="LightGray" HorizontalOptions="Start" Grid.Row="3" FontSize="12" Grid.Column="1" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddHomeTry_Clicked"/>
+        <Button x:Name="AddHomeConversion" Text="+2" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="3" FontSize="12" Grid.Column="1" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddHomeConversion_Clicked"/>
+        <Button x:Name="AddHomeGoalKick" Text="+3" BackgroundColor="LightGray" HorizontalOptions="End" Grid.Row="3" FontSize="12" Grid.Column="1" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddHomeGoalKick_Clicked"/>
 
-        <Button x:Name="AddAwayTry" Text="+5" HorizontalOptions="Start" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayTry_Clicked"/>
-        <Button x:Name="AddAwayConversion" Text="+2" HorizontalOptions="Center" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayConversion_Clicked"/>
-        <Button x:Name="AddAwayGoalKick" Text="+3" HorizontalOptions="End" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayGoalKick_Clicked"/>
+        <Button x:Name="AddAwayTry" Text="+5" BackgroundColor="LightGray" HorizontalOptions="Start" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayTry_Clicked"/>
+        <Button x:Name="AddAwayConversion" Text="+2" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayConversion_Clicked"/>
+        <Button x:Name="AddAwayGoalKick" Text="+3" BackgroundColor="LightGray" HorizontalOptions="End" Grid.Row="3" FontSize="12" Grid.Column="3" WidthRequest="40" HeightRequest="40" VerticalOptions="Center" Clicked="AddAwayGoalKick_Clicked"/>
 
         <Entry x:Name="matchName" Placeholder="Match Name" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3"></Entry>
-        <Button x:Name="SaveGame" Text="Save Game" HorizontalOptions="Center" Grid.Row="6" Grid.Column="2" Clicked="SaveGame_Clicked"/>
+        <Button x:Name="SaveGame" Text="Save Game" BackgroundColor="LightGray" HorizontalOptions="Center" Grid.Row="6" Grid.Column="2" Clicked="SaveGame_Clicked"/>
     </Grid>
 </ContentPage>
