--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/Rugby.xaml
@@ -24,6 +24,12 @@
 
         <Image x:Name="imgBackground" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="8" Aspect="AspectFill"/>
 
+        <Image x:Name="imgSound" Grid.Row="0" Grid.Column="4">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Tapped="imgSound_Tapped" NumberOfTapsRequired="2"></TapGestureRecognizer>
+            </Image.GestureRecognizers>
+        </Image>
+
         <Label x:Name="gameType" Text="Rugby" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" />
         <Label x:Name="homeTeam" Text="Home" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="1"/>
         <Label Text="-" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Grid.Row="1" Grid.Column="2"/>
